# tauri-graphql-demo

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  graphql.schema  tauri.conf.json  todos.db
src-tauri/migrations/: 20250323102253_todos.down.sql  20250323102253_todos.up.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: graphql.rs
src-tauri/src/graphql/: context.rs  mod.rs  scalar.rs  schema.rs
src-tauri/src/graphql/relay/: connection.rs  cursor.rs  edge.rs  mod.rs  node.rs  pagination.rs
src-tauri/src/models/: todo.rs
src-tauri/src/repositories/: todo.rs
src-tauri/src/utils/: mod.rs
